@@ -100,6 +100,16 @@ AC_CHECK_TOOL(RANLIB, ranlib, :)
 
 LIB_AC_PROG_CC
 
+AC_PROG_CC_C_O
+# autoconf is lame and doesn't give us any substitution variable for this.
+if eval "test \"`echo '$ac_cv_prog_cc_'${ac_cc}_c_o`\" = no"; then
+  NO_MINUS_C_MINUS_O=yes
+else
+  OUTPUT_OPTION='-o $@'
+fi
+AC_SUBST(NO_MINUS_C_MINUS_O)
+AC_SUBST(OUTPUT_OPTION)
+
 AC_ISC_POSIX
 AC_C_CONST
 AC_C_INLINE
